# ApkInstaller

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  azure-pipelines.yml  installerSettings.iss
Code/Private/: config.h  main.cpp
Code/Public/: adb.h  apkInstallCommand.h  apkInstallCommandParameter.h  commandInterface.h  consoleUtils.h  serializeSupport.h  timeStamp.h  valueChangedNotifier.h
Code/Public/OS/: kernel.h
Document/: Readme.txt  Reference.md  memo.md
Document/Manual/: Manual.md
Project/VisualStudio/: ApkInstaller.vcxproj  config.json
Projects/: CMakeLists.txt
Projects/VisualStudio/: ApkInstaller.sln  ApkInstaller.vcxproj  ApkInstaller.vcxproj.filters  thirdPartyDefinition.props
Projects/Xcode/ApkInstaller.xcodeproj/: project.pbxproj
Projects/Xcode/ApkInstaller.xcodeproj/project.xcworkspace/xcuserdata/k-tanaka.xcuserdatad/: UserInterfaceState.xcuserstate
Projects/Xcode/ApkInstaller.xcodeproj/project.xcworkspace/xcuserdata/ka-tanaka.xcuserdatad/: UserInterfaceState.xcuserstate
Projects/Xcode/ApkInstaller.xcodeproj/xcuserdata/k-tanaka.xcuserdatad/xcschemes/: xcschememanagement.plist
Projects/Xcode/ApkInstaller.xcodeproj/xcuserdata/ka-tanaka.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Source/Private/: dllMain.cxx  main.cpp  string.h
Source/Public/: apkInstallCommandParameter.h  apkInstaller.h  notifyPropertyChanged.h  serializeSupport.h
